--- a/pom.xml
+++ b/pom.xml
@@ -23,30 +23,30 @@
     <!--  GWT deps (from central repo) -->
     
    	<!-- Libs solo para probar cxf local -->
-	<dependency>
-		<groupId>javax.xml.bind</groupId>
-		<artifactId>jaxb-api</artifactId>
-		<version>2.1</version>
-		<scope>provided</scope>
-	</dependency>
-	<dependency>
-		<groupId>javax.xml.ws</groupId>
-		<artifactId>jaxws-api</artifactId>
-		<version>2.1</version>
-		<scope>provided</scope>
-	</dependency>
-	<dependency>
-		<groupId>com.sun.xml.ws</groupId>
-		<artifactId>jaxws-rt</artifactId>
-		<version>2.1.3</version>
-		<scope>provided</scope>
-	</dependency>
-	<dependency>
-		<groupId>com.sun.xml.bind</groupId>
-		<artifactId>jaxb-impl</artifactId>
-		<version>2.1.7</version>
-		<scope>provided</scope>
-	</dependency>
+<!-- 	<dependency> -->
+<!-- 		<groupId>javax.xml.bind</groupId> -->
+<!-- 		<artifactId>jaxb-api</artifactId> -->
+<!-- 		<version>2.1</version> -->
+<!-- 		<scope>provided</scope> -->
+<!-- 	</dependency> -->
+<!-- 	<dependency> -->
+<!-- 		<groupId>javax.xml.ws</groupId> -->
+<!-- 		<artifactId>jaxws-api</artifactId> -->
+<!-- 		<version>2.1</version> -->
+<!-- 		<scope>provided</scope> -->
+<!-- 	</dependency> -->
+<!-- 	<dependency> -->
+<!-- 		<groupId>com.sun.xml.ws</groupId> -->
+<!-- 		<artifactId>jaxws-rt</artifactId> -->
+<!-- 		<version>2.1.3</version> -->
+<!-- 		<scope>provided</scope> -->
+<!-- 	</dependency> -->
+<!-- 	<dependency> -->
+<!-- 		<groupId>com.sun.xml.bind</groupId> -->
+<!-- 		<artifactId>jaxb-impl</artifactId> -->
+<!-- 		<version>2.1.7</version> -->
+<!-- 		<scope>provided</scope> -->
+<!-- 	</dependency> -->
 	<!-- fin -->
     
     <dependency>
