--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,33 @@
   <dependencies>
     <!--  GWT deps (from central repo) -->
     
+   	<!-- Libs solo para probar cxf local -->
+	<dependency>
+		<groupId>javax.xml.bind</groupId>
+		<artifactId>jaxb-api</artifactId>
+		<version>2.1</version>
+		<scope>provided</scope>
+	</dependency>
+	<dependency>
+		<groupId>javax.xml.ws</groupId>
+		<artifactId>jaxws-api</artifactId>
+		<version>2.1</version>
+		<scope>provided</scope>
+	</dependency>
+	<dependency>
+		<groupId>com.sun.xml.ws</groupId>
+		<artifactId>jaxws-rt</artifactId>
+		<version>2.1.3</version>
+		<scope>provided</scope>
+	</dependency>
+	<dependency>
+		<groupId>com.sun.xml.bind</groupId>
+		<artifactId>jaxb-impl</artifactId>
+		<version>2.1.7</version>
+		<scope>provided</scope>
+	</dependency>
+	<!-- fin -->
+    
     <dependency>
       <groupId>ar.com.nextel.sfa</groupId>
       <artifactId>sfa-srv</artifactId>
@@ -235,6 +262,16 @@
         <configuration>
           <outputDirectory>war/WEB-INF/classes</outputDirectory>
           <wtpversion>2.0</wtpversion>
+          <additionalBuildcommands>
+			<buildCommand><name>com.google.gdt.eclipse.core.webAppProjectValidator</name></buildCommand>
+			<buildCommand><name>com.google.gdt.eclipse.core.gwtProjectValidator</name></buildCommand>
+		  </additionalBuildcommands>
+		  <additionalProjectnatures>
+			<projectnature>com.google.gwt.eclipse.core.gwtNature</projectnature>
+		  </additionalProjectnatures>
+		  <classpathContainers>
+			<classpathContainer>com.google.gwt.eclipse.core.GWT_CONTAINER</classpathContainer>
+		  </classpathContainers>
         </configuration>
       </plugin>
       <plugin>
