--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>ar.com.nextel.sfa</groupId>
 	<artifactId>sfa-web</artifactId>
-	<version>2.8.47-SNAPSHOT</version>
+	<version>2.8.47</version>
 	<packaging>war</packaging>
 	<name>SFA WEB</name>
 	<description>SFA Revolution Web - IE support</description>
@@ -199,7 +199,6 @@
 				<module>ar.com.nextel.sfa.SFAWeb</module>
 			</modules>
 			<i18nMessagesBundle>ar.com.nextel.sfa.client.constant.SfaStatic</i18nMessagesBundle>
-			 <style>DETAILED</style>
 		</configuration>
 		<executions>
 			<execution>
